# OpenNodeHost

./: .gitignore  .keep  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: HANDOFF.md  INDEX.md  architecture.md  mvp.md  protocol.md  transport-ssh.md
examples/: targets.example.yaml
src/opennodehost/: __init__.py  cli.py  controller_cli.py  controller_runtime.py  models.py  node_host_cli.py  protocol.py  runtime.py  targets.py
tests/: test_selftest.py
